--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
     "debug": "~4.1.1",
     "dotenv": "^8.2.0",
     "express": "~4.17.1",
+    "express-jwt": "^6.0.0",
     "http-errors": "^1.7.3",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.6.4",
     "mongose": "0.0.2-security",
     "morgan": "~1.9.1",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
     "pug": "~2.0.4",
     "request": "^2.88.2",
     "serve-favicon": "~2.5.0"
